v0.23:
    - CLI: Thorough support for JSON, YAML, updating, and patching
    - Namelist method `todict` for conversion to native Python dict
    - User-friendly print() output for namelist files
    - Most CLI features are integrated into the test suite
    - Bugfix: Content outside of namelist groupss are now tokenized as
        comments.  (Thanks to Martin Margo for reporting.)
    - Bugfix: String line continuation under the new tokenizer.  (Thanks to
        Robert Gieseke for reporting.)
    - Bugfix: Entries longer than colwidth no longer append commas, unless
        end_comma is specified
    - Bugfix: Complex lists are now parsed correctly.
    - Bugfix: Constructor now preserves start_index
    - Bugfix: f90str is now more unicode/str (2.x/3.x) compatible

v0.22:
    - A command line interface has been added, see `f90nml -h` for details.
    - We now use a native Python tokenizer, and no longer use shlex.  This has
      led to some modest performance speedups.
    - JSON and YAML files can now be read as namelists, and vice versa.
    - Bugfix: Repeated values in arrays were incorrectly applied to subsequent
      list elements (e.g. y = 5*1, 2, 3 was applying 5 to all three explicit
      elements, instead of just the first).  Thanks to @fizzysister for
      reporting.
    - Bugfix: Dicts can once again be assigned to namelist groups.  (James
      Penn)
    - Namelist patching using a second namelist (James Penn)
    - Sorted namelist field output.  (Andrew Kiss)
    - Documentation typos were fixed, and some docstrings have been cleaned up.

v0.21:
    - Several bug fixes related to derived types and start index tracking
    - Stricter checks for existing parent when modifying a derived type
    - When parsing lists of nested derived types, we now correctly set the
      parent as the respective list element, rather than the entire list.  This
      allows us to remove several redundant code checks from the parser.

v0.20: