@@ -1,16 +1,13 @@
 Command line interface
 ======================
 
-Command line interface info here
-
-
 Options
-=======
+-------
 
 .. include:: cli_flags.rst
 
 
 Examples
-========
+--------
 
 .. include:: cli_examples.rst
