@@ -1,5 +1,8 @@
+Usage
+=====
+
 Basic API
-=========
+---------
 
 .. autofunction:: f90nml.read
 
@@ -9,12 +12,13 @@ Basic API
 
 
 Classes
-=======
+-------
 
 .. autoclass:: f90nml.parser.Parser
-   :members:
+   :members: comment_tokens, dense_arrays, row_major, strict_logical
 
 .. autoclass:: f90nml.namelist.Namelist
    :members:
 
 .. autoclass:: f90nml.findex.FIndex
+   :members:
